--- a/judge/Makefile
+++ b/judge/Makefile
@@ -16,8 +16,9 @@ $(SUBST_FILES): %: %.in $(TOPDIR)/paths.mk
 evict: evict.c $(LIBHEADERS) $(LIBSOURCES)
 	$(CC) $(CFLAGS) -o $@ $< $(LIBSOURCES)
 
+LIBCGROUP_DIR = lib/libcgroup-3.1.0
 runguard: runguard.cc $(LIBHEADERS) $(LIBSOURCES) $(TOPDIR)/etc/runguard-config.h
-	$(CXX) $(CXXFLAGS) -o $@ $< $(LIBSOURCES) $(LIBCGROUP)
+	$(CXX) $(CXXFLAGS) -L$(TOPDIR)/$(LIBCGROUP_DIR)/src/.libs -I$(TOPDIR)/$(LIBCGROUP_DIR)/include  -o $@ $< $(LIBSOURCES) -lcgroup
 
 runpipe: runpipe.cc $(LIBHEADERS) $(LIBSOURCES)
 	$(CXX) $(CXXFLAGS) -static -o $@ $< $(LIBSOURCES)
