--- a/.github/workflows/runpipe.yml
+++ b/.github/workflows/runpipe.yml
@@ -29,4 +29,7 @@ jobs:
       - name: Run the actual runpipe tests
         working-directory: judge/runpipe_test
         run: make test
+      - name: Run the actual runguard tests
+        working-directory: judge/runguard_test
+        run: make test
 
