--- a/.github/workflows/runpipe.yml
+++ b/.github/workflows/runpipe.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: domjudge/gitlabci:2.1
+      options: --privileged
     steps:
       - uses: actions/checkout@v4
       - name: apt
