--- a/.github/workflows/runpipe.yml
+++ b/.github/workflows/runpipe.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   runpipe:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     container:
       image: domjudge/gitlabci:2.1
       options: --privileged
